--- a/Python_Basic_ch04_조건문(if) (2) (4.6).ipynb
+++ b/Python_Basic_ch04_조건문(if) (2) (4.6).ipynb
@@ -64,7 +64,26 @@
     "\n",
     "#1. 사용자로부터 학점 입력(소수점, ex : 4.2)\n",
     "\n",
+    "score = float(input(\"학점 입력 : \"))\n",
+    "\n",
+    "\n",
     "# + 추가조건 : 사용자가 입력한 값이 0.0 ~ 4.5이면 2번으로 넘어감,아니면 error 문구 출력(0.0 ~ 4.5 사이의 값을 입력해주세요.)\n",
+    "\n",
+    "if score >= 0.0 and score <= 4.5:    #score : 0.0~4.5\n",
+    "    if score >= 4.0:   #max score : 4.5\n",
+    "        print(\"A\")\n",
+    "    elif score >= 3.5:   #max score : 3.9\n",
+    "        print(\"B\")\n",
+    "    elif score < 3.5 and score >= 3.0:   #max score : 3.4\n",
+    "        print(\"C\")\n",
+    "    elif score < 3.0 and score >= 2.5:   #max score : 2.9\n",
+    "        print(\"D\")\n",
+    "    else:   #score : 0.0~2.4\n",
+    "        print(\"F\")\n",
+    "                      \n",
+    "else:\n",
+    "    print(\"Error : 0.0~4.5 사이의 값을 입력하세요.\")\n",
+    "        \n",
     "\n",
     "#2. 입력받은 학점에 따라 등급 출력\n",
     "# 4.0 ~ 4.5 A\n",
@@ -72,6 +91,12 @@
     "# 3.0 ~ 3.4 C\n",
     "# 2.5 ~ 2.9 D\n",
     "# 그 외 F\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(score)\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
